--- a/references.bib
+++ b/references.bib
@@ -2132,3 +2132,14 @@ URN: urn:nbn:de:0114-fqs0501297},
   year={2006},
   organization={IOS Press}
 }
+
+@article{halperin1998effect,
+  title={The effect of short-term, temporary deferral on future blood donation},
+  author={Halperin, D and Baetens, J and Newman, B},
+  journal={Transfusion},
+  volume={38},
+  number={2},
+  pages={181--183},
+  year={1998},
+  publisher={Wiley Online Library}
+}
