DSS 1st proof-read

--- a/references.bib
+++ b/references.bib
@@ -2143,3 +2143,10 @@ URN: urn:nbn:de:0114-fqs0501297},
   year={1998},
   publisher={Wiley Online Library}
 }
+
+@article{french2000decision,
+  title={Decision analysis and decision support systems},
+  author={French},
+  journal={The University of Manchester},
+  year={2000}
+}
