EasS minor changes

--- a/interoperability.tex
+++ b/interoperability.tex
@@ -359,45 +359,38 @@
 	\subsection{Decision Support Systems \& Clinical Decision Support}
 		Τα συστήματα υποστήριξης αποφάσεων (DSS - Decision Support Systems) μπορούν να οριστούν ως εφαρμογές λογισμικού οι οποίες παρέχουν υποστήριξη κατά την διαδικασία λήψης αποφάσεων, παρέχοντας βοήθεια στους χρήστες να κατανοήσουν τις επιπτώσεις των δράσεών τους\cite{french2000decision}. Τα DSS βρίσκουν χρήση σ' ένα ευρύ φάσμα εφαρμογών και εξυπηρετούν τη διαχείριση, τη λειτουργία αλλά και τα επίπεδα σχεδιασμού ενός συστήματος ή οργανισμού. Τα συστήματα υποστήριξης λήψης αποφάσεων μπορεί να είναι είτε πλήρως μηχανογραφημένα, είτε να διαχειρίζονται από ανθρώπινο δυναμικό  ή να αποτελούν συνδυασμό και των δύο (υβριδικά) \cite{miller}. 
 		
-		Τα συστήματα υποστήριξης λήψης κλινικών αποφάσεων (CDS) παρέχουν στους κλινικούς γιατρούς, στο προσωπικό, στους ασθενείς, και σε άλλα άτομα με γνώσεις σχετικές με αντικείμενα του τομέα υγείας, υποστήριξη στα κλινικά καθήκοντα τα οποία είναι συσχετισμένα με την διαδικασία απόφασης, με σκοπό  την ενίσχυση της υγείας και της υγειονομικής περίθαλψης\cite{clinicalDecision}. Ένα σύστημα υποστήριξης κλινικών αποφάσεων, ορίζεται ως ένα ``ενεργό σύστημα γνώσης, το οποίο χρησιμοποιεί δύο ή περισσότερες κατηγορίες δεδομένων του ασθενούς για να δημιουργήσει εξειδικευμένες συμβουλές". Ένα CDS σύστημα είναι απλά ένα σύστημα υποστήριξης αποφάσεων που επικεντρώνεται στην διαχείριση της γνώσης με τέτοιο τρόπο ώστε να παρέχει αξιόπιστες κλινικές συμβουλές. Σε αυτό το σημείο κρίνουμε απαραίτητο να τονίσουμε όταν CDS δεν αποσκοπεί σε καμία περίπτωση σε αντικατάσταση του γιατρού αλλά έχει καθαρά επικουρικό ρόλο με τον γιατρό να έχει πάντα τον τελευταίο λόγο\cite{miller}. 
+		Τα συστήματα υποστήριξης λήψης κλινικών αποφάσεων (CDSS - clinical decision support system) παρέχουν στους κλινικούς γιατρούς, στο προσωπικό, στους ασθενείς και σε άλλα άτομα με γνώσεις σχετικές με αντικείμενα του τομέα υγείας, υποστήριξη στα κλινικά καθήκοντα τα οποία είναι συσχετισμένα με την διαδικασία απόφασης, με σκοπό  την ενίσχυση της υγείας και της υγειονομικής περίθαλψης\cite{clinicalDecision}. Ένα σύστημα υποστήριξης κλινικών αποφάσεων, ορίζεται ως ένα ``ενεργό σύστημα γνώσης, το οποίο χρησιμοποιεί δύο ή περισσότερες κατηγορίες δεδομένων του ασθενούς για να δημιουργήσει εξειδικευμένες συμβουλές". Ένα CDS είναι απλά ένα σύστημα υποστήριξης αποφάσεων που επικεντρώνεται στην διαχείριση της γνώσης με τέτοιο τρόπο ώστε να παρέχει αξιόπιστες κλινικές συμβουλές. Σε αυτό το σημείο κρίνουμε απαραίτητο να τονίσουμε ότι το CDS δεν αποσκοπεί σε καμία περίπτωση σε αντικατάσταση του γιατρού αλλά έχει καθαρά επικουρικό ρόλο, με τον γιατρό να έχει πάντα τον τελευταίο λόγο\cite{miller}. 
 		
-		Στην παρούσα διπλωματική μας ενδιαφέρουν τα CDS συστήματα τα οποία στηρίζονται σε γνώση, δηλαδή τα συστήματα γνώσης. Τα συστήματα αυτά αποτελούνται από τρία μέρη: τη βάση των γνώσεων, έναν μηχανισμό εξαγωγής συμπερασμάτων, και ένα μηχανισμό επικοινωνίας. Η βάση γνώσης περιέχει τους κανόνες και τις συσχετίσεις των στοιχείων που συγκεντρώνονται σε αυτήν, που συνήθως παίρνουν τη μορφή του κανόνες IF-THEN. Το σύστημα συμπερασμού συνδυάζει τους κανόνες από τη βάση της γνώσης με τα δεδομένα. Ο μηχανισμός επικοινωνίας επιτρέπει στο σύστημα να δείχνει τα αποτελέσματα που προκύπτουν στον αιτούντα.
+		Στην παρούσα διπλωματική μας ενδιαφέρουν τα CDSS, τα οποία στηρίζονται σε κάποια βάση γνώσης (Knowledge-based CDSS). Τα συστήματα αυτά αποτελούνται από τρία μέρη: τη βάση των γνώσεων, έναν μηχανισμό εξαγωγής συμπερασμάτων, και ένα μηχανισμό επικοινωνίας. Η βάση γνώσης περιέχει τους κανόνες και τις συσχετίσεις των στοιχείων που συγκεντρώνονται σε αυτήν, που συνήθως παίρνουν τη μορφή κανόνων IF-THEN. Το σύστημα συμπερασμού συνδυάζει τους κανόνες από τη βάση της γνώσης με τα δεδομένα. Ο μηχανισμός επικοινωνίας επιτρέπει στο σύστημα να δείχνει τα αποτελέσματα που προκύπτουν στον αιτούντα.
 		
 \section{Υλοποίηση}
-
-
-		Στόχος είναι η υλοποίηση μίας υπηρεσίας, η οποία θα τρέχει σε cloud και θα κάνει έναν πρωταρχικό έλεγχο σχετικά με το αν ο εθελοντής επιτρέπεται να αιμοδοτήσει ή όχι. Η υπηρεσία εξετάζει την καταλληλότητα του εθελοντή, με βάση το ιατρικό ιστορικό του. Αντλεί δεδομένα από τον ηλεκτρονικό ιατρικό του φάκελο τους ασθενούς και την ηλεκτρονική συνταγογράφηση με σκοπό να εξετάσει αν υπάρχουν διαγνώσεις ή συνταγογραφήσεις, οι οποίες παραβιάζουν τα κριτήρια επιλεξιμότητας. Η υπηρεσία ανακτά τα δεδομένα που χρειάζεται για τους ελέγχους της με σύνδεση στο σύστημα epSOS, κάνοντας χρήση του ΑΜΚΑ του συγκεκριμένου εθελοντή.
+		Στόχος είναι η υλοποίηση μίας υπηρεσίας, η οποία θα τρέχει σε υπολογιστικό νέφος ιδιωτικού τύπου (private cloud) και θα κάνει έναν πρωταρχικό έλεγχο σχετικά με το αν ο εθελοντής επιτρέπεται να αιμοδοτήσει ή όχι. Η υπηρεσία εξετάζει την καταλληλότητα του εθελοντή, με βάση το ιατρικό ιστορικό του. Συγκεκριμένα αντλεί δεδομένα από τον ηλεκτρονικό ιατρικό του φάκελο του ασθενούς καθώς και από την ηλεκτρονική συνταγογράφηση με σκοπό να εξετάσει αν υπάρχουν διαγνώσεις ή συνταγογραφήσεις, οι οποίες παραβιάζουν τα κριτήρια επιλεξιμότητας. Η υπηρεσία ανακτά τα δεδομένα που χρειάζεται για τους ελέγχους της με σύνδεση στο σύστημα της ΗΔΙΚΑ, κάνοντας χρήση του ΑΜΚΑ του συγκεκριμένου εθελοντή. 
 		
 		Τα κριτήρια επιλεξιμότητας, τα οποία προκύπτουν με βάση τις οδηγίες του WHO, \cite{safety} που ελέγχει το σύστημα μας είναι τα εξής.
 		
 		%να τα γραψω
 		
-		Με βάση τα άνωθεν, το ιατρικό ιστορικό του ασθενούς και την κατάλληλη παραμετροποίηση, ο αλγόριθμος που τρέχει αποφαίνεται για το αν ο ασθενής είναι κατάλληλος ή όχι για αιμοδοσία. Όπως είδαμε για τα CDS (Clinical Decision Support) συστήματα, το σύστημα επιστρέφει την πρόταση του σχετικά με το αν πρέπει να απορριφθεί ή όχι ο ασθενής και την αναφορά των ευρημάτων του αλλά ο γιατρός είναι αυτός ο οποίος καταλήγει στην τελική απόφαση έγκρισης ή απόρριψης του ασθενούς. Το σύστημα χρησιμοποιεί προκαθορισμένους κανόνες, ενώ προσαρμόζει την βάση γνώσης στα ιατρικά δεδομένα που αντλεί για τον συγκεκριμένο ασθενή που εξετάζεται.
+		Με βάση τα άνωθεν, το ιατρικό ιστορικό του ασθενούς και την κατάλληλη παραμετροποίηση, ο αλγόριθμος που τρέχει αποφαίνεται για το αν ο ασθενής είναι κατάλληλος ή όχι για αιμοδοσία. Όπως αναφέραμε και παραπάνω για τα CDSS (Clinical Decision Support Systems), το σύστημα επιστρέφει την πρόταση του σχετικά με το αν πρέπει να απορριφθεί ή όχι ο ασθενής καθώς και την αναφορά των ευρημάτων του, αλλά ο γιατρός είναι αυτός ο οποίος καταλήγει στην τελική απόφαση έγκρισης ή απόρριψης του ασθενούς. Το σύστημα χρησιμοποιεί κανόνες απόφασης που έχουν καθοριστεί εκ των προτέρων, ενώ προσαρμόζει την βάση γνώσης στα ιατρικά δεδομένα που αντλεί για τον συγκεκριμένο ασθενή που εξετάζεται.
 	
 		
 	\subsubsection{Αρχιτεκτονική και Σχεδιασμός}
 		
-		Τα στοιχεία που χρησιμοποιούνται στην δημιουργία του Eligibility as a Service είναι τα εξής:
+		Τα στοιχεία και συστήματα που χρησιμοποιούνται στην δημιουργία του Eligibility as a Service είναι τα εξής:
 		
 		\begin{itemize}
-		
-		\item το CDS σύστημα, το οποίο βρίσκεται σε ένα ιδιωτικό νέφος (cloud).
-
+		\item Η βάση γνώσης που αξιοποιεί το DCS σύστημα, το οποίο και βρίσκεται σε ένα ιδιωτικό υπολογιστικό νέφος (private cloud).
 		\item Το ``ΣΥΖΕΥΞΙΣ", το οποίο είναι ένα έργο του Υπουργείου Διοικητικής Μεταρρύθμισης \& Ηλεκτρονικής Διακυβέρνησης (ΥΔΜΗΔ), με το οποίο επιδιώκεται η ανάπτυξη και ο εκσυγχρονισμός της τηλεπικοινωνιακής υποδομής του Δημόσιου Τομέα. Αποτελεί  ένα δίκτυο πρόσβασης και κορμού για τους φορείς του Δημοσίου, με σκοπό να καλύψει όλες τις ανάγκες για τη μεταξύ τους επικοινωνία με  Τηλεφωνία (τηλεφωνική επικοινωνία ανάμεσα στους φορείς). Θα χρησιμοποιηθεί για να εξασφαλίσουμε την ασφαλή πρόσβαση στα ιατρικά δεδομένα των ασθενών.
-		
-		\item Το κέντρο δεδομένων (data center), της ΗΔΙΚΑ (Ηλεκτρονική Διακυβέρνηση Κοινωνικής Ασφάλισης Α.Ε.), στο οποίο στεγάζονται τα δεδομένα του e-prescription και το patient record.
-		
-
-		\item CDA(epsos) πρωτόκολλο επικοινωνίας, για την μεταφορά των ιατρικών απαιτούμενων δεδομένων από την ΗΔΙΚΑ στο CDS σύστημα.
-			
+		\item Το κέντρο δεδομένων (data center), της ΗΔΙΚΑ (Ηλεκτρονική Διακυβέρνηση Κοινωνικής Ασφάλισης Α.Ε.), στο οποίο στεγάζονται τα δεδομένα της ηλεκτρονικής συνταγογράφησης καθώς και ο ηλεκτρονικός φάκελος ασθενούς.
+		\item CDA πρωτόκολλο επικοινωνίας, για την μεταφορά των απαιτούμενων ιατρικών δεδομένων από την ΗΔΙΚΑ στο CDS σύστημα.
 		\end{itemize}				
 		
 		
 		%να φτιαξω σχημα
 		
-		Τα δεδομένα της ηλεκτρονικής συνταγογράφησης και του ηλεκτρονικού ιατρικού φακέλου του ασθενούς βρίσκονται στο κέντρο δεδομένων (data center) της ΗΔΙΚΑ. Για να προσπελαστούν τα δεδομένα με ασφάλεια, χρησιμοποιούμε ασφαλή πρόσβαση μέσω του συστήματος ΣΥΖΕΥΞΙΣ. Τα δεδομένα που στέλνονται από το patient record και το e-prescription μορφοποιούνται σε κατάλληλα CDA documents, με τις επιπλέον προτυποποίησεις που προτείνει το epSOS για να αποσταλούν στο CDS σύστημα.
+		Τα δεδομένα της ηλεκτρονικής συνταγογράφησης και του ηλεκτρονικού ιατρικού φακέλου του ασθενούς βρίσκονται στο κέντρο δεδομένων (data center) της ΗΔΙΚΑ. Για να προσπελαστούν τα δεδομένα με ασφάλεια, χρησιμοποιούμε ασφαλή πρόσβαση μέσω του συστήματος ΣΥΖΕΥΞΙΣ. Τα δεδομένα που στέλνονται από το patient record και το e-prescription μορφοποιούνται σε κατάλληλα CDA documents
+		%, με τις επιπλέον προτυποποίησεις που προτείνει το epSOS για να αποσταλούν στο CDS σύστημα.
 		
-		Το επιτυχές σενάριο χρήσης είναι το εξής: Ο εγκεκριμένος γιατρός εκκινεί το Eligibility as a Service. Πληκτρολογεί στο σύστημα το ΑΜΚΑ του εθελοντή και ανακατευθύνεται ώστε να συνδεθεί, με χρήση των κωδικών του και μέσω της ασφαλής πρόσβασης που εξασφαλίζει το ΣΥΖΕΥΞΙΣ, στο e-prescription και στο patient record. Το σύστημα ``τραβά" τα δεδομένα που χρειάζεται και με βάση τους κανόνες παραγωγής καταλήγει αν ο αιμοδότης τηρεί τα κριτήρια καταλληλότητας ή όχι. Η σύνδεση με το e-prescription και το patient record τερματίζεται, αντίγραφο των δεδομένων δεν διατηρείται και το σύστημα επιστρέφει στον γιατρό την απόφαση του μαζί με την κατάλληλη αναφορά. Στο σημείο αυτό, να τονίσουμε ότι το σύστημα συμπεριφέρεται σαν ``μαύρο κουτί", γεγονός που μας επιτρέπει να χρησιμοποιήσουμε τα ευαίσθητα ιατρικά δεδομένα χωρίς να χρειάζεται να εφαρμόσουμε ανωνυμοποίηση τους (anonymization) και χωρίς να παραβιάζουμε την Αρχή Προστασίας Δεδομένων Προσωπικού Χαρακτήρα. 
+		Το επιτυχές σενάριο χρήσης είναι το εξής: Ο εγκεκριμένος γιατρός εκκινεί το Eligibility as a Service. Πληκτρολογεί στο σύστημα το ΑΜΚΑ του εθελοντή και ανακατευθύνεται ώστε να συνδεθεί, με χρήση των κωδικών του και μέσω της ασφαλής πρόσβασης που εξασφαλίζει το ΣΥΖΕΥΞΙΣ, στο e-prescription και στο patient record. Το σύστημα ``τραβά" τα δεδομένα που χρειάζεται και με βάση τους κανόνες παραγωγής καταλήγει αν ο αιμοδότης τηρεί τα κριτήρια καταλληλότητας ή όχι. Η σύνδεση με το e-prescription και το patient record τερματίζεται, αντίγραφο των δεδομένων δεν διατηρείται και το σύστημα επιστρέφει στον γιατρό την απόφαση του μαζί με την κατάλληλη αναφορά. Στο σημείο αυτό, πρέπει να τονίσουμε ότι το σύστημα συμπεριφέρεται σαν ``μαύρο κουτί", γεγονός που μας επιτρέπει να χρησιμοποιήσουμε τα ευαίσθητα ιατρικά δεδομένα χωρίς να χρειάζεται να εφαρμόσουμε ανωνυμοποίηση τους (anonymization) και χωρίς να παραβιάζουμε την Αρχή Προστασίας Δεδομένων Προσωπικού Χαρακτήρα. 
 		
 		
 		
