Interoperability - Eligibility Requirements - EMR

--- a/references.bib
+++ b/references.bib
@@ -713,8 +713,6 @@
   Number                   = {12},
   Pages                    = {2026--2027},
   Volume                   = {5},
-
-  __markedentry            = {[revekka:]},
   Acmid                    = {2367568},
   Doi                      = {10.14778/2367502.2367568},
   ISSN                     = {2150-8097},
@@ -1037,6 +1035,30 @@ Timothy Grance},
 
   Owner                    = {ilias},
   Timestamp                = {2015.10.12}
+}
+
+@Article{Gunter2005,
+  Title                    = {The Emergence of National Electronic Health Record Architectures in the United States and Australia: Models, Costs, and Questions},
+  Author                   = {Gunter, Tracy D and Terry, Nicolas P},
+  Journal                  = {Journal of Medical Internet Research},
+  Year                     = {2005},
+
+  Month                    = feb,
+  Number                   = {1},
+  Pages                    = {e3--},
+  Volume                   = {7},
+
+  __markedentry            = {[revekka:]},
+  Abstract                 = {: Emerging electronic health record models present numerous challenges to health care systems, physicians, and regulators. This article provides explanation of some of the reasons driving the development of the electronic health record, describes two national electronic health record models (currently developing in the United States and Australia) and one distributed, personal model. The US and Australian models are contrasted in their different architectures (βÄ­pullβÄù versus βÄ­pushβÄù) and their different approaches to patient autonomy, privacy, and confidentiality. The article also discusses some of the professional, practical, and legal challenges that health care providers potentially face both during and after electronic health record implementation.},
+  Address                  = {Centre for Global eHealth Innovation, Toronto, Canada},
+  Comment                  = {v7i1e3[PII]
+15829475[pmid]
+15829475[pmid]},
+  ISSN                     = {1438-8871},
+  Owner                    = {revekka},
+  Publisher                = {Gunther Eysenbach},
+  Timestamp                = {2015.10.20},
+  Url                      = {http://www.ncbi.nlm.nih.gov/pmc/articles/PMC1550638/}
 }
 
 @InProceedings{gunther2006hl7,
@@ -1515,6 +1537,29 @@ Timothy Grance},
   Timestamp                = {2015.10.13}
 }
 
+@Article{Makoul2001,
+  Title                    = {The Use of Electronic Medical Records: Communication Patterns in Outpatient Encounters},
+  Author                   = {Makoul, Gregory and Curry, Raymond H and Tang, Paul C},
+  Journal                  = {Journal of the American Medical Informatics Association : JAMIA},
+  Year                     = {2001},
+
+  Month                    = jul,
+  Number                   = {6},
+  Pages                    = {610--615},
+  Volume                   = {8},
+
+  __markedentry            = {[revekka:6]},
+  Abstract                 = {Objective: To assess physicianβÄ™patient communication patterns associated with use of an electronic medical record (EMR) system in an outpatient setting and provide an empirical foundation for larger studies. Design: An exploratory, observational study involving analysis of videotaped physicianβÄ™patient encounters, questionnaires, and medical-record reviews. Setting: General internal medicine practice at an academic medical center. Participants: Three physicians who used an EMR system (EMR physicians) and three who used solely a paper record (control physicians). A total of 204 patient visits were included in the analysis (mean, 34 for each physician). Main Outcome Measures: Content analysis of whether physicians accomplished communication tasks during encounters; qualitative analysis of how EMR physicians used the EMR and how control physicians used the paper chart. Results: Compared with the control physicians, EMR physicians adopted a more active role in clarifying information, encouraging questions, and ensuring completeness at the end of a visit. A trend suggested that EMR physicians might be less active than control physicians in three somewhat more patient-centered areas (outlining the patient's agenda, exploring psychosocial/ emotional issues, discussing how health problems affect a patient's life). Physicians in both groups tended to direct their attention to the patient record during the initial portion of the encounter. The relatively fixed position of the computer limited the extent to which EMR physicians could physically orient themselves toward the patient. Although there was no statistically significant difference between the EMR and control physicians in terms of mean time across all visits, a difference did emerge for initial visits: Initial visits with EMR physicians took an average of 37.5 percent longer than those with control physicians. Summary: An EMR system may enhance the ability of physicians to complete informationintensive tasks but can make it more difficult to focus attention on other aspects of patient communication. Further study involving a controlled, pre-/post-intervention design is justified.},
+  Comment                  = {0080610[PII]
+11687567[pmid]
+11687567[pmid]},
+  ISSN                     = {1527-974X},
+  Owner                    = {revekka},
+  Publisher                = {American Medical Informatics Association},
+  Timestamp                = {2015.10.20},
+  Url                      = {http://www.ncbi.nlm.nih.gov/pmc/articles/PMC130071/}
+}
+
 @Article{Marantidou2007,
   Title                    = {Factors that motivate and hinder blood donation in Greece},
   Author                   = {Marantidou, O and Loukopoulou, L and Zervou, E and Martinis, G and Egglezou, A and Fountouli, P and Dimoxenous, P and Parara, M and Gavalaki, M and Maniatis, A},
@@ -1543,6 +1588,34 @@ Timothy Grance},
 
   Owner                    = {revekka},
   Timestamp                = {2015.10.14}
+}
+
+@Article{McLANE2005,
+  Title                    = {Designing an EMR Planning Process Based on Staff Attitudes Toward and Opinions About Computers in Healthcare},
+  Author                   = {McLANE, SHARON},
+  Journal                  = {Computers Informatics Nursing},
+  Year                     = {2005},
+  Number                   = {2},
+  Pages                    = {--},
+  Volume                   = {23},
+  Abstract                 = {Electronic medical record (EMR) systems have been in use for more than 2 decades. Studies documenting nursing satisfaction with an EMR system, the benefits of an EMR, implementation barriers, user acceptance, the importance of staff buy-in, and the importance of attitudes toward and expectations from user buy-in are in the literature. Central to many studies is the importance of nursing staff buy-in to the successful implementation and ongoing use of an EMR, as well as the dependency of buy-in on staff attitudes and expectations. Buy-in is a precursor to effective use. Consequently, staff buy-in is a prerequisite to collecting and making optimum use of the data contained in an EMR. Data collected from an EMR containing rich, accurate documentation of nursing interventions and patient responses support evidence-based practice changes and documentation of the import of the care provided by nurses.},
+  ISSN                     = {1538-2931},
+  Keywords                 = {Attitude to computers, Computerized, Medical records systems},
+  Owner                    = {revekka},
+  Refid                    = {00024665-200503000-00008},
+  Timestamp                = {2015.10.20},
+  Url                      = {http://journals.lww.com/cinjournal/Fulltext/2005/03000/Designing_an_EMR_Planning_Process_Based_on_Staff.8.aspx}
+}
+
+@Other{MenachemiNFAUMenachemi,
+  Title                    = {Benefits and drawbacks of electronic health record systems},
+  Abstract                 = {The Health Information Technology for Economic and Clinical Health (HITECH) Act of 2009 that was signed into law as part of the βÄ­stimulus packageβÄù represents the largest US initiative to date that is designed to encourage widespread use of electronic health records (EHRs). In light of the changes anticipated from this policy initiative, the purpose of this paper is to review and summarize the literature on the benefits and drawbacks of EHR systems. Much of the literature has focused on key EHR functionalities, including clinical decision support systems, computerized order entry systems, and health information exchange. Our paper describes the potential benefits of EHRs that include clinical outcomes (eg, improved quality, reduced medical errors), organizational outcomes (eg, financial and operational benefits), and societal outcomes (eg, improved ability to conduct research, improved population health, reduced costs). Despite these benefits, studies in the literature highlight drawbacks associated with EHRs, which include the high upfront acquisition costs, ongoing maintenance costs, and disruptions to workflows that contribute to temporary losses in productivity that are the result of learning a new system. Moreover, EHRs are associated with potential perceived privacy concerns among patients, which are further addressed legislatively in the HITECH Act. Overall, experts and policymakers believe that significant benefits to patients and society can be realized when EHRs are widely adopted and used in a βÄ­meaningfulβÄù way.},
+  Address                  = {Department of Health Services Administration, University of Alabama at Birmingham, Birmingham, AL, USA},
+  Author                   = {Menachemi N FAU Menachemi, Nir and Collum TH FAU Collum, Taleah H},
+  Number                   = {1179-1594 (Electronic)},
+  Owner                    = {revekka},
+  Pages                    = {--},
+  Timestamp                = {2015.10.20}
 }
 
 @Book{cantelon,
@@ -2125,6 +2198,18 @@ URN: urn:nbn:de:0114-fqs0501297},
   Publisher                = {Springer London},
   Timestamp                = {2015.10.08},
   Url                      = {http://dx.doi.org/10.1007/s00779-014-0783-2}
+}
+
+@Article{hlektronikosIatrikosFakelos,
+  Title                    = {Ο ηλεκτρονικός ιατρικός φάκελος στα
+ελληνικά δημόσια νοσοκομεία.},
+  Author                   = {Μούρτου Ε.},
+  Journal                  = {Επιθεώρηση Υγείας,
+Τόμος 101},
+  Year                     = {Ιούλιος-Αύγουστος 2006},
+
+  Owner                    = {revekka},
+  Timestamp                = {2015.10.20}
 }
 
 @Article{karabaggeli-blatsa,
